@@ -71,3 +71,7 @@ Updated link button for ruleset 1 for bootstrap formatting
 31_05_2024
 Sprites no longer show up in preparation for deployment
 
+6_8_2024
+Application now utilizes SQLAlchemy 2.0 ORM features
+Updater is now more optimized and updated for new SQLAlchemy framework
+
